# WhisperSync

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_ANALYSIS.md  README.en.md  README.md  README.ru.md  SECURITY.md  TODO_project.md  bormosync.spec  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_sep_venv.sh  setup_venv.sh  whispersync.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
bormosync/: __init__.py  cli.py  config.py  logging_setup.py  models.py
bormosync/engine/: export.py  matcher.py  media.py  pipeline.py  strategies.py  system_check.py  timestretch.py  transcriber.py  transcript_export.py
bormosync/gui/: main_window.py  theme.qss  worker.py
bormosync/gui/widgets/: __init__.py  drop_zone.py  help_page.py  log_view.py  strategy_diagram.py  sync_simulator.py  timeline_preview.py
tests/: test_acoustic_fallback.py  test_cli.py  test_config.py  test_export.py  test_flex_duck.py  test_gui_widgets.py  test_integration_render.py  test_main_dispatch.py  test_matcher.py  test_media.py  test_naming.py  test_parallel_render.py  test_pipeline.py  test_separation.py  test_strategies.py  test_timestretch.py  test_transcriber_cache.py  test_transcript_export.py  test_verify_sync.py  test_worker_progress.py
tools/: __init__.py  verify_sync.py
whispersync/: __init__.py  app.py  cli.py  config.py  logging_setup.py  models.py
whispersync/engine/: acoustic.py  dtw.py  export.py  matcher.py  media.py  naming.py  pipeline.py  separation.py  strategies.py  system_check.py  timestretch.py  transcriber.py  transcript_export.py
whispersync/gui/: main_window.py  theme.qss  worker.py
whispersync/gui/widgets/: __init__.py  drop_zone.py  help_page.py  log_view.py  settings_dialog.py  strategy_diagram.py  sync_simulator.py  timeline_preview.py
