[project]
name = "bormosync"
version = "0.1.0"
description = "Advanced audio/video synchronization for dual-system sound via Whisper transcription, with FCPXML export"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "BormoSync Contributors" }]
keywords = [
    "video",
    "audio",
    "synchronization",
    "whisper",
    "fcpxml",
    "final-cut-pro",
    "davinci-resolve",
    "dual-system-sound",
    "clock-drift",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/Bormotoon/BormoSync"
Repository = "https://github.com/Bormotoon/BormoSync"
Issues = "https://github.com/Bormotoon/BormoSync/issues"
Changelog = "https://github.com/Bormotoon/BormoSync/blob/main/CHANGELOG.md"

[project.scripts]
bormosync = "bormosync.cli:main"
bormosync-gui = "main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"bormosync/gui/**" = ["N802"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bormosync.gui.*"
disallow_untyped_defs = false
disable_error_code = ["override", "union-attr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
