[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "whispersync"
version = "0.1.0"
description = "Advanced audio/video synchronization for dual-system sound via Whisper transcription, with FCPXML export"
readme = "README.md"
requires-python = ">=3.10"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "Bormotoon" }]
keywords = [
    "video",
    "audio",
    "synchronization",
    "whisper",
    "fcpxml",
    "final-cut-pro",
    "davinci-resolve",
    "dual-system-sound",
    "clock-drift",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "faster-whisper>=1.1.0",
    "PyQt6>=6.7.0",
    "numpy>=1.26.0",
    "platformdirs>=4.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/Bormotoon/WhisperSync"
Repository = "https://github.com/Bormotoon/WhisperSync"
Issues = "https://github.com/Bormotoon/WhisperSync/issues"
Changelog = "https://github.com/Bormotoon/WhisperSync/blob/main/CHANGELOG.md"

[project.scripts]
whispersync = "whispersync.cli:main"
whispersync-gui = "whispersync.app:main"

[tool.setuptools.packages.find]
include = ["whispersync*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"whispersync/gui/**" = ["N802"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "whispersync.gui.*"
disallow_untyped_defs = false
disable_error_code = ["override", "union-attr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: exercises real ffmpeg (slow-ish, no GPU needed); skip with -m 'not integration'",
]
